WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
195428
Follow up refactoring in try-finally code after
r242591
.
https://bugs.webkit.org/show_bug.cgi?id=195428
Summary
Follow up refactoring in try-finally code after r242591.
Mark Lam
Reported
2019-03-07 13:26:49 PST
Patch coming.
Attachments
proposed patch.
(13.45 KB, patch)
2019-03-07 13:43 PST
,
Mark Lam
saam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mark Lam
Comment 1
2019-03-07 13:43:22 PST
Created
attachment 363920
[details]
proposed patch.
EWS Watchlist
Comment 2
2019-03-07 13:46:04 PST
Attachment 363920
[details]
did not pass style-queue: ERROR: Source/JavaScriptCore/bytecompiler/BytecodeGenerator.cpp:4783: Should have only a single space after a punctuation in a comment. [whitespace/comments] [5] ERROR: Source/JavaScriptCore/bytecompiler/BytecodeGenerator.cpp:4784: Should have only a single space after a punctuation in a comment. [whitespace/comments] [5] ERROR: Source/JavaScriptCore/bytecompiler/BytecodeGenerator.cpp:4785: Should have only a single space after a punctuation in a comment. [whitespace/comments] [5] ERROR: Source/JavaScriptCore/bytecompiler/BytecodeGenerator.cpp:4815: Should have only a single space after a punctuation in a comment. [whitespace/comments] [5] ERROR: Source/JavaScriptCore/bytecompiler/BytecodeGenerator.cpp:4816: Should have only a single space after a punctuation in a comment. [whitespace/comments] [5] ERROR: Source/JavaScriptCore/bytecompiler/BytecodeGenerator.cpp:4848: Should have only a single space after a punctuation in a comment. [whitespace/comments] [5] ERROR: Source/JavaScriptCore/bytecompiler/BytecodeGenerator.cpp:4849: Should have only a single space after a punctuation in a comment. [whitespace/comments] [5] ERROR: Source/JavaScriptCore/bytecompiler/BytecodeGenerator.cpp:4850: Should have only a single space after a punctuation in a comment. [whitespace/comments] [5] ERROR: Source/JavaScriptCore/bytecompiler/BytecodeGenerator.cpp:4886: Should have only a single space after a punctuation in a comment. [whitespace/comments] [5] Total errors found: 9 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
Saam Barati
Comment 3
2019-03-07 13:46:29 PST
Comment on
attachment 363920
[details]
proposed patch. View in context:
https://bugs.webkit.org/attachment.cgi?id=363920&action=review
> Source/JavaScriptCore/bytecompiler/BytecodeGenerator.cpp:4790 > + // 10: try { > + // 11: for (... stuff ...) { > + // 12: try { > + // 13: continue; // Sets completionType to jumpID of top of the for loop. > + // 14: } finally { > + // 15: } // Jump to top of the for loop on completion. > + // 16: } > + // 15: } finally { > + // 16: }
remove line numbers
> Source/JavaScriptCore/bytecompiler/BytecodeGenerator.cpp:4820 > + // 10: try { > + // 11: try { > + // 12: return result; // Sets completionType to Return, and completionValue to result. > + // 13: } finally { > + // 14: } // Jump to outer finally on completion. > + // 15: } finally { > + // 16: }
remove line numbers
> Source/JavaScriptCore/bytecompiler/BytecodeGenerator.cpp:4888 > + // 10: try { > + // 11: return result; // Sets completionType to Return, and completionValue to result. > + // 12: } finally { > + // 13: } // Executes the return of the completionValue.
remove line numbers.
Saam Barati
Comment 4
2019-03-07 14:12:04 PST
Comment on
attachment 363920
[details]
proposed patch. View in context:
https://bugs.webkit.org/attachment.cgi?id=363920&action=review
> Source/JavaScriptCore/bytecompiler/BytecodeGenerator.cpp:4795 > + // So, we'll set the completionType to Normal (oon behalf of the target) before we jump.
oon => on
Mark Lam
Comment 5
2019-03-07 15:02:15 PST
Thanks for the review. I'm applied the fixes locally. Landed in
r242614
: <
http://trac.webkit.org/r242614
>.
Radar WebKit Bug Importer
Comment 6
2019-03-07 15:10:35 PST
<
rdar://problem/48692113
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug